[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "mementer"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mementer"

[dependencies]
derive_more = "0"
serde = "1"

chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
mementer_integrity = {path = "../mementer_integrity"}
hdk = {version = "0.0.154"}
