[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "mementer_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mementer_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = "0.1.3"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
